--- a/newHomepage/calendarCustom.css
+++ b/newHomepage/calendarCustom.css
@@ -13,9 +13,11 @@
 }
 
 @font-face {
-    font-family: "Figtree", sans-serif;
-    src: url("https://fonts.googleapis.com/css2?family=Figtree:wght@400;700&display=swap"); /*URL to font*/
-}
+    font-family: 'Figtree';
+    font-style: normal;
+    src: url(https://fonts.gstatic.com/s/figtree/v8/_Xms-HUzqDCFdgfMm4S9DQ.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
 
 .cal-mini {
     width: 100%;  
